Fix button icon alignment

--- a/ui/src/assets/typefaces.scss
+++ b/ui/src/assets/typefaces.scss
@@ -90,7 +90,6 @@
   line-height: 1;
   letter-spacing: normal;
   text-transform: none;
-  vertical-align: middle;
   display: inline-block;
   white-space: nowrap;
   word-wrap: normal;
