--- a/ui/src/assets/widgets/icon.scss
+++ b/ui/src/assets/widgets/icon.scss
@@ -21,4 +21,5 @@
   }
   line-height: 1;
   font-size: inherit;
+  vertical-align: bottom;
 }
